Issue9 (#10)
* Updates the assertj version to latest

* Creates the Position class to identify where something is in sudoku

* Provides the Position class with basic toString implementation

* Provides the Position class with updated toString implementation

* Provides the Position class with equals and hashcode

* Provides the Position class with an offsetBy to compute a new Position relative to the current Position